# Computer-Graphics-Project

./: .gitignore  README.md
code/: CMakeLists.txt  run_all.sh
code/include/: camera.hpp  curve.hpp  group.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  photon.hpp  plane.hpp  ppm.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  sppm.hpp  tracer.hpp  transform.hpp  triangle.hpp
code/src/: kdtree.cpp  main.cpp  mesh.cpp  ppm.cpp  scene_parser.cpp
code/testcases/: myscene.txt  myscene_final.txt  myscene_light.txt
